# micro-lisp

micro-lisp-shell/: Cargo.toml
micro-lisp-shell/src/: main.rs
micro-lisp-vm/: Cargo.toml
micro-lisp-vm/src/: lib.rs  tests.rs  types.rs
